--- a/index.html
+++ b/index.html
@@ -1,192 +1,154 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Arial', sans-serif;
+    }
+
+    html {
+        scroll-behavior: smooth;
+    }
+
+    body {
+        background: radial-gradient(circle at center, #1e1e1e, #121212);
+        color: #ffffff;
+        line-height: 1.6;
+    }
+
+    header {
+        background-color: #1e1e1e;
+        padding: 2rem;
+        text-align: center;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    }
+
+    header h1 {
+        font-size: 2.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    header p {
+        font-size: 1.2rem;
+        color: #bbbbbb;
+        font-style: italic;
+    }
+
+    nav {
+        background-color: #252525;
+        padding: 1rem;
+        text-align: center;
+    }
+
+    nav a {
+        color: #ffffff;
+        text-decoration: none;
+        margin: 0 1.5rem;
+        font-size: 1.1rem;
+        transition: color 0.3s;
+        position: relative;
+        display: inline-block;
+        padding-bottom: 0.5rem;
+    }
+
+    nav a::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: #00adb5;
+        transform: scaleX(0);
+        transition: transform 0.3s ease;
+    }
+
+    nav a:hover {
+        color: #00adb5;
+    }
+
+    nav a:hover::after {
+        transform: scaleX(1);
+    }
+
+    .container {
+        max-width: 800px;
+        margin: 2rem auto;
+        padding: 0 1rem;
+        opacity: 0;
+        animation: fadeIn 1s forwards;
+    }
+
+    @keyframes fadeIn {
+        to {
+            opacity: 1;
         }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
+    }
 
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
+    section {
+        margin-bottom: 3rem;
+        background-color: #1e1e1e;
+        padding: 2rem;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    }
 
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
+    section h2 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+        color: #00adb5;
+        position: relative;
+        padding-bottom: 1rem;
+    }
 
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanskar Pandey - Personal Website</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
+    section h2::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 50px;
+        height: 3px;
+        background-color: #00adb5;
+    }
 
-        body {
-            background-color: #121212;
-            color: #ffffff;
-            line-height: 1.6;
-        }
+    section p {
+        font-size: 1.1rem;
+        color: #cccccc;
+    }
 
-        header {
-            background-color: #1e1e1e;
-            padding: 2rem;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-        }
+    .skills-list {
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
 
-        header h1 {
-            font-size: 2.5rem;
-            margin-bottom: 0.5rem;
-        }
+    .skills-list li {
+        background-color: #252525;
+        padding: 0.5rem 1rem;
+        border-radius: 5px;
+        font-size: 1rem;
+        transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
+    }
 
-        header p {
-            font-size: 1.2rem;
-            color: #bbbbbb;
-        }
+    .skills-list li:hover {
+        transform: scale(1.05);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        background-color: #00adb5;
+    }
 
-        nav {
-            background-color: #252525;
-            padding: 1rem;
-            text-align: center;
-        }
+    footer {
+        background-color: #1e1e1e;
+        text-align: center;
+        padding: 1rem;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
+    }
 
-        nav a {
-            color: #ffffff;
-            text-decoration: none;
-            margin: 0 1.5rem;
-            font-size: 1.1rem;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: #00adb5;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-        }
-
-        section {
-            margin-bottom: 3rem;
-        }
-
-        section h2 {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-            color: #00adb5;
-        }
-
-        section p {
-            font-size: 1.1rem;
-            color: #cccccc;
-        }
-
-        .skills-list {
-            list-style: none;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-        }
-
-        .skills-list li {
-            background-color: #252525;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            font-size: 1rem;
-        }
-
-        footer {
-            background-color: #1e1e1e;
-            text-align: center;
-            padding: 1rem;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        footer p {
-            font-size: 0.9rem;
-            color: #bbbbbb;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Sanskar Pandey</h1>
-        <p>Software Developer | Technology Enthusiast</p>
-    </header>
-
-    <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <div class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>
-                Hello, I'm Sanskar Pandey, a passionate software developer with a keen interest in creating innovative solutions. 
-                With a strong foundation in computer science, I enjoy tackling complex problems and building user-friendly applications.
-                My goal is to contribute to cutting-edge technology projects while continuously enhancing my skills.
-            </p>
-        </section>
-
-        <section id="skills">
-            <h2>Skills</h2>
-            <ul class="skills-list">
-                <li>Python</li>
-                <li>JavaScript</li>
-                <li>HTML & CSS</li>
-                <li>React</li>
-                <li>Node.js</li>
-                <li>SQL</li>
-            </ul>
-        </section>
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>
-                Feel free to reach out to me for collaboration or inquiries. 
-                You can contact me via email at sanskar.pandey@example.com or connect with me on LinkedIn.
-            </p>
-        </section>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Sanskar Pandey. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+    footer p {
+        font-size: 0.9rem;
+        color: #bbbbbb;
+    }
+</style>
